--- a/WalletWasabi.Fluent/Controls/TileControl.axaml
+++ b/WalletWasabi.Fluent/Controls/TileControl.axaml
@@ -10,35 +10,21 @@
     </c:TileControl>
   </Design.PreviewWith>
 
-  <Style Selector="HeaderedContentControl.tile">
-    <Setter Property="Template">
-      <ControlTemplate>
-        <DockPanel>
-          <ContentPresenter DockPanel.Dock="Top" Content="{TemplateBinding Header}"
-                            Classes="h8 bold"
-                            ContentTemplate="{TemplateBinding HeaderTemplate}" />
-          <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" />
-        </DockPanel>
-      </ControlTemplate>
-    </Setter>
-  </Style>
-
   <Style Selector="c|TileControl">
     <Setter Property="SeparatorMargin" Value="0 6"></Setter>
     <Setter Property="BottomPartHeight" Value="22"></Setter>
     <Setter Property="Template">
       <ControlTemplate>
-        <HeaderedContentControl Classes="tile" Header="{TemplateBinding Title}">
-          <DockPanel>
-            <StackPanel DockPanel.Dock="Bottom" Name="PART_BottomContent" IsVisible="{TemplateBinding IsBottomContentVisible}">
-              <Separator DockPanel.Dock="Bottom" Margin="{TemplateBinding SeparatorMargin}" />
-              <Viewbox Height="{TemplateBinding BottomPartHeight}">
-                <ContentPresenter Content="{TemplateBinding BottomContent}" />
-              </Viewbox>
-            </StackPanel>
-            <ContentPresenter Name="PART_Content" Content="{TemplateBinding Content}" />
-          </DockPanel>
-        </HeaderedContentControl>
+        <DockPanel>
+          <TextBlock Text="{TemplateBinding Title}" DockPanel.Dock="Top" Classes="h8 bold" />
+          <StackPanel DockPanel.Dock="Bottom" Name="PART_BottomContent" IsVisible="{TemplateBinding IsBottomContentVisible}">
+            <Separator DockPanel.Dock="Bottom" Margin="{TemplateBinding SeparatorMargin}" />
+            <Viewbox Height="{TemplateBinding BottomPartHeight}">
+              <ContentPresenter Content="{TemplateBinding BottomContent}" />
+            </Viewbox>
+          </StackPanel>
+          <ContentPresenter Name="PART_Content" Content="{TemplateBinding Content}" />
+        </DockPanel>
       </ControlTemplate>
     </Setter>
   </Style>
