Simplify design. Thanks @soors :)

--- a/WalletWasabi.Fluent/Controls/TileControl.axaml
+++ b/WalletWasabi.Fluent/Controls/TileControl.axaml
@@ -11,18 +11,23 @@
   </Design.PreviewWith>
 
   <Style Selector="c|TileControl">
-    <Setter Property="SeparatorMargin" Value="0 6"></Setter>
-    <Setter Property="BottomPartHeight" Value="22"></Setter>
+    <Setter Property="SeparatorMargin" Value="0 6" />
+    <Setter Property="BottomPartHeight" Value="22" />
     <Setter Property="Template">
       <ControlTemplate>
-        <DockPanel>
-          <TextBlock Text="{TemplateBinding Title}" DockPanel.Dock="Top" Classes="h8 bold" />
-          <StackPanel DockPanel.Dock="Bottom" Name="PART_BottomContent" IsVisible="{TemplateBinding IsBottomContentVisible}">
-            <Separator DockPanel.Dock="Bottom" Margin="{TemplateBinding SeparatorMargin}" />
-            <ContentPresenter Content="{TemplateBinding BottomContent}" />
-          </StackPanel>
-          <ContentPresenter Name="PART_Content" Content="{TemplateBinding Content}" />
-        </DockPanel>
+        <Border CornerRadius="2" BorderThickness="1" Background="{DynamicResource TileRegionColor}"
+                BorderBrush="{DynamicResource TileBorderColor}"
+                Margin="0 0 10 0" Padding="12">
+          <DockPanel>
+            <TextBlock Text="{TemplateBinding Title}" DockPanel.Dock="Top" Classes="h8 bold" />
+            <StackPanel DockPanel.Dock="Bottom" Name="PART_BottomContent"
+                        IsVisible="{TemplateBinding IsBottomContentVisible}">
+              <Separator DockPanel.Dock="Bottom" Margin="{TemplateBinding SeparatorMargin}" />
+              <ContentPresenter Content="{TemplateBinding BottomContent}" />
+            </StackPanel>
+            <ContentPresenter Name="PART_Content" Content="{TemplateBinding Content}" />
+          </DockPanel>
+        </Border>
       </ControlTemplate>
     </Setter>
   </Style>
