--- a/WalletWasabi.Fluent/Views/AddWallet/Create/ConfirmRecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/Create/ConfirmRecoveryWordsView.axaml
@@ -12,29 +12,71 @@
              x:CompileBindings="True"
              x:Class="WalletWasabi.Fluent.Views.AddWallet.Create.ConfirmRecoveryWordsView">
   <c:ContentArea Title="{Binding Title}"
+                 Caption="Click the recovery words in the correct order."
                  EnableCancel="{Binding EnableCancel}"
                  EnableBack="{Binding EnableBack}"
                  EnableNext="True" NextContent="Continue"
                  EnableSkip="{Binding IsSkipEnable}"
-                 IsBusy="{Binding IsBusy}">
-    <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Center" MaxWidth="350">
-      <ItemsControl Items="{Binding ConfirmationWords}">
-        <i:Interaction.Behaviors>
-          <behaviors:FocusFirstTextBoxInItemsControlBehavior />
-        </i:Interaction.Behaviors>
+                 IsBusy="{Binding IsBusy}"
+                 ScrollViewer.VerticalScrollBarVisibility="Disabled">
+    <DockPanel>
+      <ItemsControl Items="{Binding AvailableWords}" DockPanel.Dock="Top" Margin="30 10 30 0">
+        <ItemsControl.ItemsPanel>
+          <ItemsPanelTemplate>
+            <WrapPanel />
+          </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
         <ItemsControl.ItemTemplate>
           <DataTemplate>
-            <DockPanel>
-              <Label Content="{Binding Index, StringFormat=Recovery word {0}, Mode=OneWay}" DockPanel.Dock="Top" />
-              <TextBox Watermark="Type in the word" Classes="hasCheckMarkBoolean" validation:CheckMarkStatus.IsEnabled="{Binding IsConfirmed}" Text="{Binding Input}" IsEnabled="{Binding !IsConfirmed}" DockPanel.Dock="Top">
-                <i:Interaction.Behaviors>
-                  <behaviors:FocusNextItemBehavior IsFocused="{Binding !IsConfirmed}" />
-                </i:Interaction.Behaviors>
-              </TextBox>
-            </DockPanel>
+            <CheckBox IsChecked="{Binding IsSelected}">
+              <CheckBox.Styles>
+                <Style Selector="CheckBox[IsChecked=True] /template/ c|TagControl">
+                  <Setter Property="Background" Value="{DynamicResource SystemAccentColor}" />
+                  <Setter Property="Foreground" Value="{DynamicResource ActionButtonForegroundColor}" />
+                </Style>
+              </CheckBox.Styles>
+              <CheckBox.Template>
+                <ControlTemplate>
+                  <c:TagControl DataContext="{Binding Word}" Content="{Binding .}" x:Name="Tag" />
+                </ControlTemplate>
+              </CheckBox.Template>
+            </CheckBox>
           </DataTemplate>
         </ItemsControl.ItemTemplate>
       </ItemsControl>
-    </ScrollViewer>
+
+      <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Center" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+        <Panel>
+          <ItemsControl Items="{Binding ConfirmationWords}" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="ItemsControl" Margin="0 10 0 0">
+            <ItemsControl.Styles>
+              <Style Selector="TextBlock">
+                <Setter Property="FontSize" Value="{DynamicResource FontSizeH6}" />
+                <Setter Property="Height" Value="42" />
+              </Style>
+            </ItemsControl.Styles>
+            <ItemsControl.ItemsPanel>
+              <ItemsPanelTemplate>
+                <WrapPanel MaxHeight="252" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center" />
+              </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+              <DataTemplate>
+                <StackPanel Orientation="Horizontal" Margin="50 0 50 0" Width="80">
+                  <TextBlock Text="{Binding Index, Mode=OneWay, StringFormat={}{0}.}" Opacity="0.5" />
+                  <TextBlock Text="{Binding SelectedWord}" FontWeight="SemiBold" Margin="5 0 0 0" IsVisible="{Binding IsConfirmed}" />
+                  <TextBlock Text="{Binding SelectedWord}" FontWeight="SemiBold" Margin="5 0 0 0" Foreground="IndianRed" IsVisible="{Binding !IsConfirmed}" />
+                </StackPanel>
+              </DataTemplate>
+            </ItemsControl.ItemTemplate>
+          </ItemsControl>
+
+          <Panel HorizontalAlignment="Center" VerticalAlignment="Center"
+                 Width="{Binding #ItemsControl.Bounds.Width}"
+                 Height="{Binding #ItemsControl.Bounds.Height}">
+            <Separator Classes="vertical" Margin="0 0 0 20" />
+          </Panel>
+        </Panel>
+      </ScrollViewer>
+    </DockPanel>
   </c:ContentArea>
 </UserControl>
