--- a/WalletWasabi.Fluent/Views/CoinControl/SelectCoinsDialogView.axaml
+++ b/WalletWasabi.Fluent/Views/CoinControl/SelectCoinsDialogView.axaml
@@ -73,7 +73,11 @@
 
     </controls:ContentArea.Styles>
 
-    <TreeDataGrid Source="{Binding Source}" CanUserSortColumns="True" />
+    <TreeDataGrid Source="{Binding Source}" CanUserSortColumns="True">
+      <TreeDataGrid.ElementFactory> 
+        <treeDataGrid:CustomElementFactory /> 
+      </TreeDataGrid.ElementFactory> 
+    </TreeDataGrid>
 
   </controls:ContentArea>
 </UserControl>
