--- a/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
@@ -14,7 +14,7 @@
                  EnableCancel="{Binding EnableCancel}"
                  EnableBack="{Binding EnableBack}"
                  EnableNext="True" NextContent="Continue" FocusNext="True"
-                 ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled">
     <DockPanel>
       <c:InfoMessage Opacity="0.5"
                      HorizontalAlignment="Center"
@@ -32,7 +32,7 @@
           </ItemsControl.Styles>
           <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
-              <WrapPanel MaxHeight="252" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center" />
+              <WrapPanel MaxHeight="168" Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center" />
             </ItemsPanelTemplate>
           </ItemsControl.ItemsPanel>
           <ItemsControl.ItemTemplate>
@@ -45,11 +45,13 @@
           </ItemsControl.ItemTemplate>
         </ItemsControl>
 
-        <Panel HorizontalAlignment="Center" VerticalAlignment="Center"
-               Width="{Binding #ItemsControl.Bounds.Width}"
-               Height="{Binding #ItemsControl.Bounds.Height}">
-          <Separator Classes="vertical" Margin="0 0 0 20" />
-        </Panel>
+        <Grid ColumnDefinitions="*,1,*,1,*"
+              HorizontalAlignment="Center" VerticalAlignment="Center"
+              Width="{Binding #ItemsControl.Bounds.Width}"
+              Height="{Binding #ItemsControl.Bounds.Height}">
+          <Separator Classes="vertical" Margin="0 0 0 20" Grid.Column="1" />
+          <Separator Classes="vertical" Margin="0 0 0 20" Grid.Column="3" />
+        </Grid>
       </Panel>
     </DockPanel>
   </c:ContentArea>
