--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Columns/LabelsColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Columns/LabelsColumnView.axaml
@@ -8,7 +8,7 @@
              x:Class="WalletWasabi.Fluent.Views.Wallets.Home.History.Columns.LabelsColumnView"
              x:DataType="historyItems:HistoryItemViewModelBase"
              x:CompileBindings="True">
-  <c:PrivacyContentControl PrivacyReplacementMode="Text" NumberOfPrivacyChars="15" FontSize="15"
+  <c:PrivacyContentControl PrivacyReplacementMode="Text" FontSize="15"
                            HorizontalAlignment="Stretch"
                            VerticalAlignment="Stretch"
                            HorizontalContentAlignment="Left"
