--- a/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/SelectionColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Advanced/WalletCoins/Columns/SelectionColumnView.axaml
@@ -7,5 +7,5 @@
              x:DataType="walletcoins:WalletCoinViewModel"
              x:CompileBindings="True"
              x:Class="WalletWasabi.Fluent.Views.Wallets.Advanced.WalletCoins.Columns.SelectionColumnView">
-  <CheckBox IsChecked="{Binding IsSelected}" Margin="2 0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+  <CheckBox IsChecked="{Binding IsSelected}" Margin="2 0" HorizontalAlignment="Center" VerticalAlignment="Center" IsEnabled="{Binding IsAllowedToSend}" />
 </UserControl>
