--- a/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
@@ -15,15 +15,10 @@
                  EnableBack="{Binding EnableBack}"
                  EnableNext="True" NextContent="Continue" FocusNext="True"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-    <DockPanel>
-      <c:InfoMessage Opacity="0.5"
-                     HorizontalAlignment="Center"
-                     DockPanel.Dock="Bottom">
-        <TextBlock Text="You will not be able to see these words again once the wallet is created." />
-      </c:InfoMessage>
-
-      <Panel>
-        <ItemsControl Items="{Binding MnemonicWords}" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="ItemsControl" Margin="0 20 0 0">
+    <Grid RowDefinitions="*,0,Auto,*,20">
+      
+      <Panel Grid.Row="2">
+        <ItemsControl Items="{Binding MnemonicWords}" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="ItemsControl">
           <ItemsControl.Styles>
             <Style Selector="TextBlock">
               <Setter Property="FontSize" Value="{DynamicResource FontSizeH6}" />
@@ -49,10 +44,18 @@
               HorizontalAlignment="Center" VerticalAlignment="Center"
               Width="{Binding #ItemsControl.Bounds.Width}"
               Height="{Binding #ItemsControl.Bounds.Height}">
-          <Separator Classes="vertical" Grid.Column="1" />
-          <Separator Classes="vertical" Grid.Column="3" />
+          <Separator Classes="vertical" Grid.Column="1" Margin="0 0 0 20"/>
+          <Separator Classes="vertical" Grid.Column="3" Margin="0 0 0 20"/>
         </Grid>
       </Panel>
-    </DockPanel>
+
+
+      <c:InfoMessage Opacity="0.5"
+                     HorizontalAlignment="Center"
+                     Grid.Row="4">
+        <TextBlock Text="You will not be able to see these words again once the wallet is created." />
+      </c:InfoMessage>
+
+    </Grid>
   </c:ContentArea>
 </UserControl>
