--- a/WalletWasabi.Fluent/Views/AddWallet/AddWalletPageView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/AddWalletPageView.axaml
@@ -32,6 +32,7 @@
 
           <Style Selector="Panel.small c|TileButton">
             <Setter Property="Width" Value="120" />
+            <Setter Property="VerticalContentAlignment" Value="Bottom"/>
           </Style>
         </UniformGrid.Styles>
         <c:TileButton Text="Create a new wallet"
