Use Available Balance on first Send screen

--- a/WalletWasabi.Fluent/Views/Wallets/Send/SendView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/SendView.axaml
@@ -27,8 +27,8 @@
             <Button Focusable="False" Classes="plainHyperlink h8" Command="{Binding InsertMaxCommand}">
               <TextBlock DataContext="{Binding Balance}" Opacity="0.6">
                 <TextBlock.Text>
-                  <MultiBinding StringFormat="Balance: {0} {1}">
-                    <Binding Path="BalanceBtc^"  />
+                  <MultiBinding StringFormat="Available Balance: {0} {1}">
+                    <Binding Path="BalanceBtc^" />
                     <Binding Path="BalanceFiat^" Converter="{x:Static converters:MoneyConverters.ToUsdAproxBetweenParens}" />
                   </MultiBinding>
                 </TextBlock.Text>
